# virtual-fridge

./: .gitignore  .replit  README.md  db.sqlite3  firebase_api.txt  index.html  ingredientslist.txt  login.html  main.py  manage.py  package-lock.json  pyproject.toml  requirements.txt
firelog/: settings.py  urls.py  wsgi.py
static/css/: login.css  screen.css
static/js/: body.js  body.min.js  index.js  popup.js
templates/: dashboard.html  home.html  login.html  myrecipes.html  popup.html  recipe.html  recipeslist.html  sign_up.html  signup.html
virtualfridge/: settings.py  urls.py  views.py  wsgi.py
