[tool.poetry]
name = "virtual-fridge-2"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.12"
pyrebase = "^3.0.27"
django-admin = "^2.0.1"
whitenoise = "^5.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
